src/test/ui/object-safety/object-safety-associated-consts.curr.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-associated-consts.rs:12:31
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                               ^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-associated-consts.rs:9:11
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     const X: usize;
   |           ^ ...because it contains this associated `const`
   = help: consider moving `X` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
